--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "foodmine-react",
   "version": "1.0.0",
   "description": "## 1. Demo And Installation",
-  "main": "index.js",
+  "main": "backend/index.js",
   "scripts": {
-    "start": "cd backend && npm start",
+    "start": "cd backend && npm start",              
     "prebuild": "cd backend && npm install && cd frontend && npm install",
-    "build": "cd frontend && npm run build",
-"postbuild": "move /y frontend\\build backend\\src\\public"
-
+    "build": "cd frontend && npm run build",         
+    "postbuild": "xcopy frontend\\build backend\\src\\public /E /Y"
   },
   "keywords": [],
   "author": "",
