--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "foodmine-react",
   "version": "1.0.0",
   "description": "## 1. Demo And Installation",
-  "main": "backend/index.js",
+  "main": "backend/src/server.js",
   "scripts": {
-    "start": "cd backend && npm start",              
+    "start": "cd backend && npm start",  
     "prebuild": "cd backend && npm install && cd frontend && npm install",
     "build": "cd frontend && npm run build",         
     "postbuild": "xcopy frontend\\build backend\\src\\public /E /Y"
