--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "foodmine-react",
   "version": "1.0.0",
   "description": "## 1. Demo And Installation",
-  "main": "backend/src/server.js",
+  "main": "backend/src/server.js",  
   "scripts": {
-    "start": "cd backend && npm start",  
+    "start": "cd backend && npm start",
     "prebuild": "cd backend && npm install && cd frontend && npm install",
-    "build": "cd frontend && npm run build",         
-    "postbuild": "xcopy frontend\\build backend\\src\\public /E /Y"
+    "build": "cd frontend && npm run build",
+    "postbuild": "cp -r frontend/build/* backend/src/public/"  
   },
   "keywords": [],
   "author": "",
