--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "foodmine-react",
   "version": "1.0.0",
   "description": "## 1. Demo And Installation",
-  "main": "backend/src/server.js",  
+  "main": "backend/src/server.js",
   "scripts": {
     "start": "cd backend && npm start",
-    "prebuild": "cd backend && npm install && cd frontend && npm install",
-    "build": "cd frontend && npm run build",
+    "prebuild": "cd backend && npm install && cd ../frontend && npm install", 
+    "build": "cd frontend && npm run build", 
     "postbuild": "xcopy /E /Y frontend\\build\\* backend\\src\\public\\"
-
-
-    
   },
   "keywords": [],
   "author": "",
