--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "## 1. Demo And Installation",
   "main": "backend/src/server.js",
   "scripts": {
-    "start": "cd backend && npm start",
-    "prebuild": "cd backend && npm install && cd ../frontend && npm install", 
-    "build": "cd frontend && npm run build", 
-    "postbuild": "xcopy /E /Y frontend\\build\\* backend\\src\\public\\"
+   "start": "cd backend && npm start",
+  "prebuild": "cd backend && npm install && cd frontend && npm install",
+  "build": "cd frontend && npm run build",
+  "postbuild": "xcopy /E /Y frontend\\build\\* backend\\src\\public\\"
+
   },
   "keywords": [],
   "author": "",
